manifests/production/ezxss/v1_namespace_ezxss.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: ezxss
  name: ezxss
