manifests/production/ezxss/apps_v1_deployment_ezxss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: ezxss
    app.kubernetes.io/instance: ezxss
    app.kubernetes.io/name: ezxss
    app.kubernetes.io/part-of: ezxss
  name: ezxss
  namespace: ezxss
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ezxss
      app.kubernetes.io/instance: ezxss
      app.kubernetes.io/name: ezxss
      app.kubernetes.io/part-of: ezxss
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ezxss
        app.kubernetes.io/instance: ezxss
        app.kubernetes.io/name: ezxss
        app.kubernetes.io/part-of: ezxss
    spec:
      containers:
      - env:
        - name: EZXSS_DBPASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: ezxss-db-password
        image: ghcr.io/gadgetmg/ezxss:master@sha256:a0bea899b39bc35925e4fb7d1cc0e22332451756a2c35c721589e779f1a1bc79
        name: ezxss
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      restartPolicy: Always
      securityContext:
        fsGroup: 33
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
