manifests/production/ezxss/gateway.networking.k8s.io_v1_gateway_ezxss-cloudflare.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ezxss-cloudflare
  namespace: ezxss
spec:
  gatewayClassName: cloudflare
  listeners:
  - name: http
    port: 80
    protocol: HTTP
