manifests/production/ezxss/gateway.networking.k8s.io_v1_httproute_ezxss.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ezxss
  namespace: ezxss
spec:
  hostnames:
  - dm3.in
  parentRefs:
  - name: ezxss
  - name: ezxss-cloudflare
  rules:
  - backendRefs:
    - name: ezxss
      port: 8080
